--- a/src/products/containers/products/products.component.html
+++ b/src/products/containers/products/products.component.html
@@ -1,1 +1,11 @@
-<p>products works!</p>
+<div class="container-content-new">
+  <a routerLink="./new" class="btn btn-ok">Pizza New</a>
+</div>
+<div class="container-content-list">
+  <div *ngIf="!!!((pizzas)?.length)">
+    No pizzas, please click 'Pizza New' button to add new pizza!
+  </div>
+  <app-pizza-item
+    *ngFor="let pizza of pizzas"
+    [pizza]="pizza"></app-pizza-item>
+</div>
