--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,139 @@
 /* You can add global styles to this file, and also import other style files */
+$default-margin: 35px;
+$default-bc: #fff;
+$default-br: 4px;
+$cs-font: 'conerstone';
+
+@font-face {
+  font-family: conerstone;
+  src: url("./assets/fonts/cornerstone.woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+nav {
+  height: 15vh;
+  background-color: darkgray;
+  border: 0;
+  display: flex;
+  justify-content: space-between;
+
+  .outline {
+    margin: 5px 20px;
+  }
+}
+
+a {
+  text-decoration: none;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 15px;
+  outline: 0;
+  border: 0;
+  border-radius: 3px;
+  font-size: 16px;
+  font-family: 'conerstone';
+  cursor: pointer;
+  transition: all 0.2s ease;
+
+  &-ok {
+    background: #0f9675;
+    color: $default-bc;
+  }
+}
+
+.container {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  border-radius: $default-br;
+  max-width: 1000px;
+  margin: 0 auto 50px;
+
+  &-nav {
+    background: #ab131b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px 5px 0 0;
+
+    a {
+      color: #fff;
+      padding: 15px 35px;
+      font-family: $cs-font;
+
+      &.active {
+        background: #921217;
+      }
+    }
+  }
+
+  &-content {
+    padding: $default-margin;
+    background-color: darkred;
+
+    &-new {
+      margin: -35px -35px $default-margin -35px;
+      background: #f9f9f9;
+      padding: $default-margin;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &-list {
+      display: flex;
+      flex-wrap: wrap;
+      font-family: $cs-font;
+      color: whitesmoke;
+
+      app-pizza-item {
+        background: $default-bc;
+        flex: 0 0 33.33%;
+        margin: 0 0 55px;
+        transition: 0.2s all ease;
+
+        .pizza-item-class {
+          text-align: center;
+          margin: 0 10px;
+          padding: 20px 10px;
+          border-radius: $default-br;
+          background: #f5f5f5;
+
+          app-pizza-display {
+            display: block;
+          }
+
+          h4 {
+            margin: 10px 0;
+            font-size: 20px;
+            font-family: 'conerstone';
+            color: black;
+          }
+        }
+      }
+    }
+  }
+}
+
+footer {
+  height: 25vh;
+  border-radius: 0 0 4px 4px;
+  background-color: darkorchid;
+  display: flex;
+  justify-content: space-around;
+  color: #ffffff;
+  padding: 10px;
+  text-align: center;
+  font-family: $cs-font;
+
+  .foot-content {
+    width: 300px;
+    color: white;
+    margin: 30px;
+  }
+}
+
