--- a/src/products/components/pizza-item/pizza-item.component.html
+++ b/src/products/components/pizza-item/pizza-item.component.html
@@ -3,7 +3,7 @@
     <app-pizza-display
       [pizza]="pizza"></app-pizza-display>
     <h4>
-      <span>{{pizza.name}}</span>
+      <div>{{pizza.name}}</div>
       <button class="btn btn-ok">View Pizza</button>
     </h4>
   </a>
