--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,10 @@ $default-bc: #fff;
 $default-br: 4px;
 $cs-font: 'conerstone';
 
+body{
+  background: #333333;
+}
+
 @font-face {
   font-family: conerstone;
   src: url("./assets/fonts/cornerstone.woff");
@@ -13,7 +17,7 @@ $cs-font: 'conerstone';
 
 nav {
   height: 15vh;
-  background-color: darkgray;
+  //background-color: orange;
   border: 0;
   display: flex;
   justify-content: space-between;
@@ -73,7 +77,7 @@ a {
 
   &-content {
     padding: $default-margin;
-    background-color: darkred;
+    //background-color: darkred;
 
     &-new {
       margin: -35px -35px $default-margin -35px;
@@ -119,10 +123,38 @@ a {
   }
 }
 
+.btn{
+  display: inline-block;
+  padding: 10px 15px;
+  margin:0;
+  outline: 0;
+  border: 0;
+  border-radius: 3px;
+  font-size: 16px;
+  font-family: 'conerstone';
+  cursor: pointer;
+  transition: all 0.2s ease;
+
+  &-ok{
+    background: #0f9675;
+    color: white;
+    &:hover{
+      background: #0a7d61;
+    }
+  }
+
+  &-warning{
+    background: #ab131c;
+    &:hover{
+      background: #880c14;
+    }
+  }
+}
+
 footer {
   height: 25vh;
   border-radius: 0 0 4px 4px;
-  background-color: darkorchid;
+  background-color: #0f9675;
   display: flex;
   justify-content: space-around;
   color: #ffffff;
