--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,12 +8,11 @@
   <div class="container-nav">
     <a routerLink="products" routerLinkActive="active">Products</a>
   </div>
-
+  <app-message></app-message>
   <div class="container-content">
     <router-outlet></router-outlet>
   </div>
 </div>
-
 
 
 <!--      ======================= Footer ========================        -->
