user login register done

--- a/src/auth/logout/containers/logout/logout.component.html
+++ b/src/auth/logout/containers/logout/logout.component.html
@@ -1,1 +1,13 @@
-<p>logout works!</p>
+<div>
+  <div class="alert alert-danger">
+    Are you sure you want to logout?
+  </div>
+  <div class="msgBtn">
+    <button type="button" class="btn btn-success"
+            (click)="onStayHere()">Stay
+    </button>
+    <button type="button" class="btn btn-danger"
+            (click)="onLogout()">Logout
+    </button>
+  </div>
+</div>
