--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <!--      ======================= Header ========================        -->
 <nav>
   <div class="outline"><img src="../../assets/img/logo.png"></div>
-  <div class="outline"><h1>Menu</h1></div>
+  <div class="outline"><i class="fa fa-shopping-cart" id="menuIcon"></i></div>
+  <div class="outline"><a routerLink="/auth/logout">Logout</a></div>
 </nav>
 
 <div class="container">
