--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,51 @@
 <!--      ======================= Header ========================        -->
-<nav>
+<header>
   <div class="outline"><img src="../../assets/img/logo.png"></div>
   <div class="outline"><i class="fa fa-shopping-cart" id="menuIcon"></i></div>
-  <div class="outline"><a routerLink="/auth/logout">Logout</a></div>
+</header>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+  <div class="btn-group" id="wrapper">
+    <div class="containerLeft">
+      <button class="btn btn-link dropdown-toggle"
+              type="button"
+              id="dropDownToggle"
+              (click)="toggleMenu()"
+              data-toggle="dropdown"
+              [ngClass]="{show: showMenu}"
+              aria-haspopup="true" aria-expanded="false">
+        <i class="fa fa-user"></i>
+        {{authService.currentUser ? (authService?.currentUser?.user?.username) : 'Login'}}
+      </button>
+    </div>
+    <div class="containerRight">
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+              data-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup" aria-expanded="false"
+              aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </div>
+
+  <div class="dropdown-menu"
+       [ngClass]="{'show': showMenu}"
+       (click)="showMenu = !showMenu">
+    <div *ngIf="authService.currentUser">
+      <a routerLink="users/{{authService?.currentUser?.user?.id}}"
+         class="dropdown-item">My Profile</a>
+      <a routerLink="auth/logout" class="dropdown-item">Sign out</a>
+    </div>
+    <div *ngIf="!authService.currentUser">
+      <a routerLink="/auth/login"
+         class="dropdown-item">Login</a>
+      <div class="dropdown-divider"></div>
+      <a routerLink="orders" class="dropdown-item">Orders</a>
+    </div>
+  </div>
 </nav>
+
 
 <div class="container">
   <div class="container-nav">
