--- a/src/products/containers/product-item/product-item.component.html
+++ b/src/products/containers/product-item/product-item.component.html
@@ -2,6 +2,7 @@
   <app-pizza-form
     [pizza]="pizza"
     [toppings]="toppings"
+    [canEdit]="authService?.canEditProduct"
     (selected)="onSelect($event)"
     (pizzaCreate)="pizzaOnCreate($event)"
   (pizzaChangeSave)="pizzaOnChange($event)"
