--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ $default-bc: #fff;
 $default-br: 4px;
 $cs-font: 'conerstone';
 
-body{
+body {
   background: #333333;
 }
 
@@ -124,10 +124,10 @@ a {
   }
 }
 
-.btn{
+.btn {
   display: inline-block;
   padding: 10px 15px;
-  margin:0;
+  margin: 0;
   outline: 0;
   border: 0;
   border-radius: 3px;
@@ -136,17 +136,19 @@ a {
   cursor: pointer;
   transition: all 0.2s ease;
 
-  &-ok{
+  &-ok {
     background: #0f9675;
     color: white;
-    &:hover{
+
+    &:hover {
       background: #0a7d61;
     }
   }
 
-  &-warning{
+  &-warning {
     background: #ab131c;
-    &:hover{
+
+    &:hover {
       background: #880c14;
     }
   }
@@ -169,4 +171,50 @@ footer {
     margin: 30px;
   }
 }
+
+.cart-btn {
+  border: 1px solid #c1c1c1;
+  font-weight: bold;
+  text-transform: uppercase !important;
+  text-align: center;
+  border-radius: 6px;
+  line-height: 35px !important;
+  display: block;
+  cursor: pointer;
+  outline: none;
+  opacity: 0.95;
+
+  &:focus {
+    opacity: 1.0;
+  }
+
+  &:disabled {
+    opacity: 0.7;
+  }
+}
+
+.quantity-button {
+  color: #FD5F09;
+  width: 32px !important;
+  height: 32px !important;
+}
+
+.green-button {
+  color: white;
+  background: #0f9675;
+  border-color: #339001;
+}
+
+.cart-price {
+  color: #2a1204;
+  font-size: 20px;
+  font-family: pzUltra, Arial, sans-serif;
+}
+
+.cart-quantity{
+  font-size: 20px;
+  color: #2a1204;
+  padding: 0 4px 0 4px;
+}
+
 
