--- a/src/auth/register/containers/register/register.component.html
+++ b/src/auth/register/containers/register/register.component.html
@@ -10,6 +10,6 @@
         <span class="sr-only">Loading...</span>
       </div>
     </button>
-    <div class="error" *ngIf="hasError">{{hasError}}</div>
+<!--    <div class="error" *ngIf="hasError">{{hasError}}</div>-->
   </app-auth-form>
 </div>
