--- a/src/products/components/order-form/order-form.component.scss
+++ b/src/products/components/order-form/order-form.component.scss
@@ -1,7 +1,3 @@
-
-
-
-
 .order-form {
   margin: 10px 0 10px 0;
   display: flex;
@@ -10,7 +6,7 @@
 
   &-item {
     padding: 0 5px 0 5px;
-    dislay: flex;
+    display: flex;
     justify-content: space-between;
     transition: all 0.2s ease;
   }
