--- a/src/products/components/pizza-display/pizza-display.component.html
+++ b/src/products/components/pizza-display/pizza-display.component.html
@@ -1,7 +1,7 @@
 <div class="pizza-display-class">
   <div class="pizza-display-class-base">
     <img src="../assets/img/pizza.svg">
-    <img
+    <img @drop
     *ngFor="let topping of pizza?.toppings; index as i"
     class="pizza-display-class-topping"
     src="../../../assets/img/toppings/{{topping.name}}.svg"
