--- a/src/styles.scss
+++ b/src/styles.scss
@@ -172,12 +172,34 @@ footer {
   }
 }
 
+
+.quantity-button {
+  color: #FD5F09;
+  width: 32px !important;
+  height: 32px !important;
+}
+
+.green-button {
+  color: white;
+  background: #0f9675;
+  border-color: #339001;
+}
+
+.bar-gradient {
+  background: -webkit-linear-gradient(top, #ffffff, #efefef);
+}
+
+.bar-highlighted {
+  border-color: rgba(60, 172, 1, 0.5) !important;
+}
+
 .cart-btn {
   border: 1px solid #c1c1c1;
   font-weight: bold;
   text-transform: uppercase !important;
   text-align: center;
   border-radius: 6px;
+  padding: 0 6px;
   line-height: 35px !important;
   display: block;
   cursor: pointer;
@@ -193,28 +215,17 @@ footer {
   }
 }
 
-.quantity-button {
-  color: #FD5F09;
-  width: 32px !important;
-  height: 32px !important;
-}
-
-.green-button {
-  color: white;
-  background: #0f9675;
-  border-color: #339001;
-}
-
 .cart-price {
   color: #2a1204;
   font-size: 20px;
   font-family: pzUltra, Arial, sans-serif;
 }
 
-.cart-quantity{
+.cart-quantity {
   font-size: 20px;
   color: #2a1204;
   padding: 0 4px 0 4px;
 }
+
 
 
