pipe added back
cannot get data back from pipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,6 +55,9 @@
   <div class="container-content">
     <router-outlet></router-outlet>
   </div>
+  <div>
+    <app-cart-bar></app-cart-bar>
+  </div>
 </div>
 
 
