--- a/src/cart/components/cart-bar/cart-bar.component.html
+++ b/src/cart/components/cart-bar/cart-bar.component.html
@@ -3,7 +3,7 @@
     <div class="pizza-orderplacing-item">
       <div class="order-form">
         <div class="order-form-item">
-                    {{ (message$ | async | fetchCartInfo).orderNum}} Items
+                    {{ (message$ | async | fetchCartInfo)}} Items
         </div>
         <div class="order-form-item">
                     Total: ${{ (message$ | async | fetchCartInfo).total.toFixed(2)}}
